# nix-fer-talk

./: .gitignore  README.md
01-presentation/: 0.txt  1.txt  2.hs  2.txt  3.hs  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  Haslider.hs  OldStyleMain.hs  ghci.script  slide.txt
02-cabal-install-demo/01-limbo/: limbo.cabal
02-cabal-install-demo/01-limbo/src/: Limbo.hs
02-cabal-install-demo/02-hell/: hell.cabal
02-cabal-install-demo/02-hell/src/: Hell.hs
02-cabal-install-demo/03-sandbox/: cabal.sandbox.config
04-stack-demo/blog/: README.md  blog.cabal  blog.hs  hello
04-stack-demo/blog/src/: Blog.hs  Haskonf.hs  Main.hs
04-stack-demo/blog/src/System/Environment/: FindBin.hs
05-nix-demo/blog/: .gitignore  LICENSE  blog.cabal  default.nix  project.nix  shell.nix
