name:                limbo
version:             0.1.0.0
license-file:        LICENSE
author:              Jonn Mostovoy
maintainer:          amarr.industrial@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Limbo
  build-depends:       base,
                       deepseq,
                       semigroups < 0.19.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
